--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,6 +32,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: circleci/clojure:openjdk-11-tools-deps-1.10.1.502
+      env:
+        VESSEL_TEST_REGISTRY: registry
       options: -u 1001:115
 
     services:
